crates/kaban-parser/tests/snapshots/expressions__if_expression_with_braces.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: if (x == 10) {
            foo();
    }

Block [
    IfExpression {
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
        then: Block [
            FuncCall {
                callee: Identifier("foo"),
                args: [],
            },
        ],
    },
]
