crates/kaban-parser/tests/snapshots/expressions__if_expression_with_else_if_condition.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: if (x == 10) foo(); else if (x == y) buzz(); else bazz();

Block [
    IfExpression {
        condition: Equal {
            left: Identifier("x"),
            right: IntLit("10"),
        },
        then: FuncCall {
            callee: Identifier("foo"),
            args: [],
        },
        else: IfExpression {
            condition: Equal {
                left: Identifier("x"),
                right: Identifier("y"),
            },
            then: FuncCall {
                callee: Identifier("buzz"),
                args: [],
            },
            else: FuncCall {
                callee: Identifier("bazz"),
                args: [],
            },
        },
    },
]
