crates/kaban-parser/tests/snapshots/expressions__if_expression_with_is_and_to_binding_condition.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: if (x to time is Day.Monday) { foo(); }

Block [
    IfExpression {
        condition: ToIs {
            original: Identifier("x"),
            binding: IdentifierBinding {
                name: Identifier("time"),
                mutable: false,
            },
            is target: MemberAccess {
                left: Identifier("Day"),
                right: Identifier("Monday"),
            },
        },
        then: Block [
            FuncCall {
                callee: Identifier("foo"),
                args: [],
            },
        ],
    },
]
