crates/kaban-parser/tests/snapshots/expressions__if_expression_with_is_condition.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: if (x is Day.Monday) { foo(); } else if (x is type i32) { buzz(); }

Block [
    IfExpression {
        condition: ToIs {
            original: Identifier("x"),
            binding: IdentifierBinding {
                name: Identifier("x"),
                mutable: false,
            },
            is target: MemberAccess {
                left: Identifier("Day"),
                right: Identifier("Monday"),
            },
        },
        then: Block [
            FuncCall {
                callee: Identifier("foo"),
                args: [],
            },
        ],
        else: IfExpression {
            condition: ToIs {
                original: Identifier("x"),
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: false,
                },
                is target: Type(I32),
            },
            then: Block [
                FuncCall {
                    callee: Identifier("buzz"),
                    args: [],
                },
            ],
        },
    },
]
