crates/kaban-parser/tests/snapshots/expressions__implementation_access.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: Person::Core;

Block [
    ImplAccess {
        left: Identifier("Person"),
        right: Identifier("Core"),
    },
]
